# high-pay-salary-predictor

./: .dockerignore  .env.example  .gitignore  .pip-audit-ignore.txt  .pre-commit-config.yaml  .trivyignore  04_salary_prediction_model.ipynb  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  config.yaml  config_schema.py  data_viz.ipynb  docker-compose.yml  dvc.yaml  high_pay_Analysis.ipynb  high_pay_jobs_data_cleaning.ipynb  high_paying_jobs_data_visualization.ipynb  interpretetion_question.txt  pipeline.py  predictive_analysis.ipynb  pyproject.toml  questions.txt  requirements-api.txt  requirements-lock.txt  requirements.txt  streamlit_app.py  test_seaborn.py  us_high_income_jobs_map.ipynb  us_mapping.ipynb
.github/: dependabot.yml
.github/workflows/: ci.yml  train.yml
Data/: bls_data.csv  census_data.csv  cleaned_high_pay_data.csv
Images/: High_Paid_Distribution_Map.html
api/: __init__.py  cache.py  drift.py  inference.py  main.py  schemas.py
deploy/huggingface/: .dockerignore  DEPLOY.md  Dockerfile  README.md  start.sh
k8s/: api-configmap.yaml  api-deployment.yaml  api-pdb.yaml  api-service.yaml  dashboard-deployment.yaml  hpa.yaml
models/: baseline_stats.json  feature_names.json  group_means.json  model_metrics.json  xgb_premium_classifier.ubj  xgb_salary_model.ubj
reports/: business_intelligence_report.md  data_science_report.md
scripts/: export_onnx.py  train_model.py  train_quantile.py
src/: data_processing.py  visualization.py
tests/: conftest.py  test_api.py  test_classifier.py  test_docker_image.py  test_drift.py  test_inference.py  test_integration.py  test_model_version.py  test_no_dangling_trainer_refs.py  test_performance.py  test_pipeline.py  test_single_trainer.py  test_version_consistency.py
