[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name            = "high-pay-analysis-us"
# 2.0.0 — quantile reframe. The API returns P10/P50/P90 from a
# multi-quantile XGBoost model instead of a single point estimate.
# ``predicted_salary`` is retained as an alias for P50 so v1 clients
# keep working, but the framing change is a breaking semantic upgrade.
version         = "2.0.0"
description     = "End-to-end data science pipeline for US high-paying jobs ($100K+) — salary quantile predictor"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.11"

# ── Package discovery ────────────────────────────────────────────────────────
# Allows `pip install -e .` so imports work without sys.path hacks.
[tool.setuptools]
py-modules = ["pipeline", "config_schema"]

[tool.setuptools.packages.find]
include = ["api*", "scripts*"]

# ── Ruff (linter + formatter, replaces flake8 + black + isort) ───────────────
[tool.ruff]
line-length    = 120
target-version = "py312"
exclude        = [".venv", "__pycache__", "*.ipynb", "build", "dist"]

[tool.ruff.lint]
# E/W = pycodestyle  F = pyflakes  I = isort  UP = pyupgrade  B = flake8-bugbear
select   = ["E", "W", "F", "I", "UP", "B"]
ignore   = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"    = ["S101"]   # allow assert in tests
"scripts/*"  = ["T201"]   # allow print in scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy (static type checker) ────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.12"
warn_return_any     = true
warn_unused_configs = true
exclude             = [".venv", "build"]

# Third-party packages without bundled stubs — ignore missing imports only for these.
[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "sklearn.*",
    "shap.*",
    "plotly.*",
    "streamlit.*",
    "yaml",
    "scipy.*",
    "statsmodels.*",
    "nbformat.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["api", "pipeline", "scripts"]
omit    = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 75
